PIES page, LouRIM, LSM logo

--- a/html/institutions/Italy/UniPi/index.html
+++ b/html/institutions/Italy/UniPi/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US" xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>
-            Publications
+            University of Pisa
         </title>
         <meta charset="UTF-8" />
         <link rel="shortcut icon" href="../../../../img/PPJMHJ.ico" />
