--- a/html/miscellaneous/P/index.html
+++ b/html/miscellaneous/P/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US" xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>
-            Publications
+            P
         </title>
         <meta charset="UTF-8" />
         <link rel="shortcut icon" href="../../../img/PPJMHJ.ico" />
@@ -13,6 +13,8 @@
         <a href="../../ubi_bene_ibi_patria.html">
             <img src="../../../img/Ubi_bene_ibi_patria_logo.jpg" />
         </a>
+
+
 		<ul class="site_menu">
             <li><a href = "../../../index.html">Home</a></li>
             <li><a href = "../../publications/index.html">Publications</a></li>
@@ -49,6 +51,11 @@
             <li><a href = "../X/index.html">X</a></li>
             <li><a href = "../Y/index.html">Y</a></li>
             <li><a href = "../Z/index.html">Z</a></li>
+		</ul>
+
+
+		<ul class="site_menu">
+            <li><a href = "../P/PIES/index.html">PIES</a></li>
 		</ul>
 
         <h1 class = "big">P</h1>
