hierarchies, events, PIES, Odoo

--- a/html/403.html
+++ b/html/403.html
@@ -13,10 +13,11 @@
         <a href="ubi_bene_ibi_patria.html"><img src="../img/Ubi_bene_ibi_patria_logo.jpg" /></a>
 		<ul class="site_menu">
             <li><a href = "../index.html">Home</a></li>
-            <li><a href = "publications/index.html">Publications</a></li>
-            <li><a href = "institutions/index.html">Institutions</a></li>
-            <li><a href = "contact.html">Contact</a></li>
-            <li><a href = "miscellaneous/index.html">Miscellaneous</a></li>
+            <li><a href = "../html/publications/index.html">Publications</a></li>
+            <li><a href = "../html/events/index.html">Events</a></li>
+            <li><a href = "../html/institutions/index.html">Institutions</a></li>
+            <li><a href = "../html/contact.html">Contact</a></li>
+            <li><a href = "../html/miscellaneous/index.html">Miscellaneous</a></li>
 		</ul>
 		<h1 class = "big">Error 403 : <error>access denied</error></h1>
 	<div>﻿
