--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<ul class="site_menu">
             <li><a href = "index.html" class = "selected">Home</a></li>
             <li><a href = "html/publications/index.html">Publications</a></li>
+            <li><a href = "html/events/index.html">Events</a></li>
             <li><a href = "html/institutions/index.html">Institutions</a></li>
             <li><a href = "html/contact.html">Contact</a></li>
             <li><a href = "html/miscellaneous/index.html">Miscellaneous</a></li>
@@ -24,15 +25,18 @@
     <img src="img/PJ_portrait.png" />
 
 <p>
-    Hello! Welcome to my personal website. I am a scientist working on information systems. 
+    Welcome to my personal website. I am a scientist working on information systems. 
 </p>
 
 <p>
-    For instance, I am developing a computer system to facilitate the integration of data originating from different criminal justice databases. In general, I am interested by computers, psychology, language and mathematics.
+    At the moment, I am developing a computer system to facilitate the integration of data originating from different criminal justice databases: the <a href = "html/miscellaneous/I/IHD/index.html">Integrated Historical Database (IHD)</a>. 
+</p> 
+<p>   
+    In general, I am interested by computers, psychology, language and mathematics.
 </p>
 
 <p>
-    Here, you'll find information about my academic activities by consulting the <a href = "html/publications/index.html">publications</a> I took part in, and the <a href = "html/institutions/index.html">institutions</a> that supported me. 
+    On this website, next to a <a href = "html/miscellaneous/index.html">miscellaneous</a> array of subjects that interest me or that pertain to me, you'll find the <a href = "html/publications/index.html">publications</a> I took part in, the <a href = "html/events/index.html">events</a> in which I may have been involved, and the <a href = "html/institutions/index.html">institutions</a> that supported me in these endeavours. 
 </p>
 
 
@@ -43,7 +47,7 @@
 
 
 
-<br /><signature> — 17 September 2023</signature>
+<br /><signature> — 7 October 2023</signature>
         </div>
     </body>
 </html>
