--- a/html/contact.html
+++ b/html/contact.html
@@ -14,10 +14,11 @@
 
 		<ul class="site_menu">
             <li><a href = "../index.html">Home</a></li>
-            <li><a href = "publications/index.html">Publications</a></li>
-            <li><a href = "institutions/index.html">Institutions</a></li>
-            <li><a href = "contact.html" class = "selected">Contact</a></li>
-            <li><a href = "miscellaneous/index.html">Miscellaneous</a></li>
+            <li><a href = "../html/publications/index.html">Publications</a></li>
+            <li><a href = "../html/events/index.html">Events</a></li>
+            <li><a href = "../html/institutions/index.html">Institutions</a></li>
+            <li><a href = "../html/contact.html" class = "selected">Contact</a></li>
+            <li><a href = "../html/miscellaneous/index.html">Miscellaneous</a></li>
 		</ul>
         ﻿<h1 class = "big">Contact</h1>
  <div>
