--- a/html/institutions/Italy/UniPi/index.html
+++ b/html/institutions/Italy/UniPi/index.html
@@ -16,6 +16,7 @@
 		<ul class="site_menu">
             <li><a href = "../../../../index.html">Home</a></li>
             <li><a href = "../../../publications/index.html">Publications</a></li>
+            <li><a href = "../../../events/index.html">Events</a></li>
             <li><a href = "../../index.html" class = "selected">Institutions</a></li>
             <li><a href = "../../../contact.html">Contact</a></li>
             <li><a href = "../../../miscellaneous/index.html">Miscellaneous</a></li>
