--- a/html/miscellaneous/P/PIES/index.html
+++ b/html/miscellaneous/P/PIES/index.html
@@ -18,6 +18,7 @@
 		<ul class="site_menu">
             <li><a href = "../../../../index.html">Home</a></li>
             <li><a href = "../../../publications/index.html">Publications</a></li>
+            <li><a href = "../../../events/index.html">Events</a></li>
             <li><a href = "../../../institutions/index.html">Institutions</a></li>
             <li><a href = "../../../contact.html">Contact</a></li>
             <li><a href = "../../../miscellaneous/index.html"  class = "selected">Miscellaneous</a></li>
@@ -58,14 +59,24 @@
             <li><a href = "../../P/PIES/index.html" class = "selected">PIES</a></li>
 		</ul>
 
+		<ul class="site_menu">
+            <li><a href = "../../P/PIES/summary.html">Summary</a></li>
+            <li><a href = "../../P/PIES/partners.html">Partners</a></li>
+            <li><a href = "../../P/PIES/workshop.html">Workshop</a></li>
+            <li><a href = "../../P/PIES/conference.html">Conference</a></li>
+            <li><a href = "../../P/PIES/results.html">Results</a></li>
+            <li><a href = "../../P/PIES/publications.html">Publications</a></li>
+		</ul>
+
         <h1 class = "big">PIES – The Prüm Implementation, Evaluation, and Strengthening of Forensic DNA Data Exchange</h1>
 
         <div>
 
-
-
-
-            <br /><signature> — 21 September 2023</signature>
+            <p>
+                Official website: <a href = "https://incc.fgov.be/PIES" target = "_blank">https://incc.fgov.be/PIES</a>
+            </p>
+            
+            <br /><signature> — 1 October 2023</signature>
 
         </div>
 
