--- a/html/miscellaneous/index.html
+++ b/html/miscellaneous/index.html
@@ -9,44 +9,50 @@
         <link rel="stylesheet" type="text/css" href="../../css/default.css" />
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     </head>
+    
     <body class="w3-container w3-auto w3-section w3-mobile">
-        <a href="../ubi_bene_ibi_patria.html">
-            <img src="../../img/Ubi_bene_ibi_patria_logo.jpg" /></a>
-		<ul class="site_menu">
+        <a href="../../html/ubi_bene_ibi_patria.html">
+            <img src="../../img/Ubi_bene_ibi_patria_logo.jpg" />
+        </a>
+        <ul class="site_menu">
             <li><a href = "../../index.html">Home</a></li>
-            <li><a href = "../publications/index.html">Publications</a></li>
-            <li><a href = "../institutions/index.html">Institutions</a></li>
-            <li><a href = "../contact.html">Contact</a></li>
-            <li><a href = "../miscellaneous/index.html" class = "selected">Miscellaneous</a></li>
-		</ul>
-		<ul class="site_menu">
-            <li><a href = "A/index.html">A</a></li>
-            <li><a href = "B/index.html">B</a></li>
-            <li><a href = "C/index.html">C</a></li>
-            <li><a href = "D/index.html">D</a></li>
-            <li><a href = "E/index.html">E</a></li>
-            <li><a href = "F/index.html">F</a></li>
-            <li><a href = "G/index.html">G</a></li>
-            <li><a href = "H/index.html">H</a></li>
-            <li><a href = "I/index.html">I</a></li>
-            <li><a href = "J/index.html">J</a></li>
-            <li><a href = "K/index.html">K</a></li>
-            <li><a href = "L/index.html">L</a></li>
-            <li><a href = "M/index.html">M</a></li><br />
-            <li><a href = "N/index.html">N</a></li>
-            <li><a href = "O/index.html">O</a></li>
-            <li><a href = "P/index.html">P</a></li>
-            <li><a href = "Q/index.html">Q</a></li>
-            <li><a href = "R/index.html">R</a></li>
-            <li><a href = "S/index.html">S</a></li>
-            <li><a href = "T/index.html">T</a></li>
-            <li><a href = "U/index.html">U</a></li>
-            <li><a href = "V/index.html">V</a></li>
-            <li><a href = "W/index.html">W</a></li>
-            <li><a href = "X/index.html">X</a></li>
-            <li><a href = "Y/index.html">Y</a></li>
-            <li><a href = "Z/index.html">Z</a></li>
-		</ul>
+            <li><a href = "../../html/publications/index.html">Publications</a></li>
+            <li><a href = "../../html/events/index.html">Events</a></li>
+            <li><a href = "../../html/institutions/index.html">Institutions</a></li>
+            <li><a href = "../../html/contact.html">Contact</a></li>
+            <li><a href = "../../html/miscellaneous/index.html"  class = "selected">Miscellaneous</a></li>
+        </ul>
+
+
+        <ul class="site_menu">
+            <li><a href = "../../html/miscellaneous/A/index.html">A</a></li>
+            <li><a href = "../../html/miscellaneous/B/index.html">B</a></li>
+            <li><a href = "../../html/miscellaneous/C/index.html">C</a></li>
+            <li><a href = "../../html/miscellaneous/D/index.html">D</a></li>
+            <li><a href = "../../html/miscellaneous/E/index.html">E</a></li>
+            <li><a href = "../../html/miscellaneous/F/index.html">F</a></li>
+            <li><a href = "../../html/miscellaneous/G/index.html">G</a></li>
+            <li><a href = "../../html/miscellaneous/H/index.html">H</a></li>
+            <li><a href = "../../html/miscellaneous/I/index.html">I</a></li>
+            <li><a href = "../../html/miscellaneous/J/index.html">J</a></li>
+            <li><a href = "../../html/miscellaneous/K/index.html">K</a></li>
+            <li><a href = "../../html/miscellaneous/L/index.html">L</a></li>
+            <li><a href = "../../html/miscellaneous/M/index.html">M</a></li><br />
+            <li><a href = "../../html/miscellaneous/N/index.html">N</a></li>
+            <li><a href = "../../html/miscellaneous/O/index.html">O</a></li>
+            <li><a href = "../../html/miscellaneous/P/index.html">P</a></li>
+            <li><a href = "../../html/miscellaneous/Q/index.html">Q</a></li>
+            <li><a href = "../../html/miscellaneous/R/index.html">R</a></li>
+            <li><a href = "../../html/miscellaneous/S/index.html">S</a></li>
+            <li><a href = "../../html/miscellaneous/T/index.html">T</a></li>
+            <li><a href = "../../html/miscellaneous/U/index.html">U</a></li>
+            <li><a href = "../../html/miscellaneous/V/index.html">V</a></li>
+            <li><a href = "../../html/miscellaneous/W/index.html">W</a></li>
+            <li><a href = "../../html/miscellaneous/X/index.html">X</a></li>
+            <li><a href = "../../html/miscellaneous/Y/index.html">Y</a></li>
+            <li><a href = "../../html/miscellaneous/Z/index.html">Z</a></li>
+        </ul>
+
 	<h1 class = "big">Miscellaneous</h1>
 
         <div>
