--- a/html/publications/science_justice/book_chapter.html
+++ b/html/publications/science_justice/book_chapter.html
@@ -10,25 +10,26 @@
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     </head>
     <body class="w3-container w3-auto w3-section w3-mobile">
-        <a href="../../ubi_bene_ibi_patria.html">
+        <a href="../../../html/ubi_bene_ibi_patria.html">
             <img src="../../../img/Ubi_bene_ibi_patria_logo.jpg" />
         </a>
 		<ul class="site_menu">
             <li><a href = "../../../index.html">Home</a></li>
-            <li><a href = "../index.html" class = "selected">Publications</a></li>
-            <li><a href = "../../institutions/index.html">Institutions</a></li>
-            <li><a href = "../../contact.html">Contact</a></li>
-            <li><a href = "../../miscellaneous/index.html">Miscellaneous</a></li>
+            <li><a href = "../../../html/publications/index.html" class = "selected">Publications</a></li>
+            <li><a href = "../../../html/events/index.html">Events</a></li>
+            <li><a href = "../../../html/institutions/index.html">Institutions</a></li>
+            <li><a href = "../../../html/contact.html">Contact</a></li>
+            <li><a href = "../../../html/miscellaneous/index.html">Miscellaneous</a></li>
 		</ul>
 		<ul class="site_menu">
-            <li><a href = "../cog_sci/index.html">Cognitive Science</a></li>
-            <li><a href = "index.html" class = "selected">Science & Justice</a></li>
+            <li><a href = "../../../html/publications/cog_sci/index.html">Cognitive Science</a></li>
+            <li><a href = "../../../html/publications/science_justice/index.html" class = "selected">Science & Justice</a></li>
 		</ul>
 
         <ul class="site_menu">
-            <li><a href = "journal_article.html">Journal articles</a></li>
-            <li><a href = "book_chapter.html" class = "selected" >Book chapters</a></li>
-            <li><a href = "technical_report.html">Technical reports</a></li>
+            <li><a href = "../../../html/publications/science_justice/journal_article.html">Journal articles</a></li>
+            <li><a href = "../../../html/publications/science_justice/book_chapter.html" class = "selected">Book chapters</a></li>
+            <li><a href = "../../../html/publications/science_justice/technical_report.html">Technical reports</a></li>
 		</ul>
 
 	<h1 class = "big">Book chapters</h1>
