--- a/html/institutions/Belgium/NICC/index.html
+++ b/html/institutions/Belgium/NICC/index.html
@@ -9,29 +9,31 @@
         <link rel="stylesheet" type="text/css" href="../../../../css/default.css" />
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     </head>
+
     <body class="w3-container w3-auto w3-section w3-mobile">
-        <a href="../../../ubi_bene_ibi_patria.html">
-            <img src="../../../../img/Ubi_bene_ibi_patria_logo.jpg" />
-        </a>
+        
+        <a href="../../../../html/ubi_bene_ibi_patria.html">
+            <img src="../../../../img/Ubi_bene_ibi_patria_logo.jpg" /></a>
 		<ul class="site_menu">
             <li><a href = "../../../../index.html">Home</a></li>
-            <li><a href = "../../../publications/index.html">Publications</a></li>
-            <li><a href = "../../../events/index.html">Events</a></li>
-            <li><a href = "../../index.html" class = "selected">Institutions</a></li>
-            <li><a href = "../../../contact.html">Contact</a></li>
-            <li><a href = "../../../miscellaneous/index.html">Miscellaneous</a></li>
+            <li><a href = "../../../../html/publications/index.html">Publications</a></li>
+            <li><a href = "../../../../html/events/index.html">Events</a></li>
+            <li><a href = "../../../../html/institutions/index.html" class = "selected">Institutions</a></li>
+            <li><a href = "../../../../html/contact.html">Contact</a></li>
+            <li><a href = "../../../../html/miscellaneous/index.html">Miscellaneous</a></li>
 		</ul>
 		<ul class="site_menu">
-            <li><a href = "../index.html" class = "selected">Belgium</a></li>
-            <li><a href = "../../Canada/index.html">Canada</a></li>
-            <li><a href = "../../Italy/index.html">Italy</a></li>
-            <li><a href = "../../USA/index.html">USA</a></li>
+            <li><a href = "../../../../html/institutions/Belgium/index.html" class = "selected">Belgium</a></li>
+            <li><a href = "../../../../html/institutions/Canada/index.html">Canada</a></li>
+            <li><a href = "../../../../html/institutions/Italy/index.html">Italy</a></li>
+            <li><a href = "../../../../html/institutions/USA/index.html">USA</a></li>
 		</ul>
 
+
         <ul class="site_menu">
-            <li><a href = "../../Belgium/UCLouvain/index.html">UCLouvain</a></li>
-            <li><a href = "../../Belgium/KULeuven/index.html">KU Leuven</a></li>
-            <li><a href = "index.html" class = "selected">NICC</a></li>
+            <li><a href = "../../../../html/institutions/Belgium/index.html">UCLouvain</a></li>
+            <li><a href = "../../../../html/institutions/Belgium/KULeuven/index.html">KU Leuven</a></li>
+            <li><a href = "../../../../html/institutions/Belgium/NICC/index.html" class = "selected">NICC</a></li>
 		</ul>
 
   
