--- a/html/institutions/index.html
+++ b/html/institutions/index.html
@@ -9,34 +9,38 @@
         <link rel="stylesheet" type="text/css" href="../../css/default.css" />
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     </head>
+
+    
     <body class="w3-container w3-auto w3-section w3-mobile">
-        <a href="../ubi_bene_ibi_patria.html">
+        <a href="../../html/ubi_bene_ibi_patria.html">
             <img src="../../img/Ubi_bene_ibi_patria_logo.jpg" /></a>
 		<ul class="site_menu">
             <li><a href = "../../index.html">Home</a></li>
-            <li><a href = "../publications/index.html">Publications</a></li>
-            <li><a href = "../events/index.html">Events</a></li>
-            <li><a href = "index.html" class = "selected">Institutions</a></li>
-            <li><a href = "../contact.html">Contact</a></li>
-            <li><a href = "../miscellaneous/index.html">Miscellaneous</a></li>
+            <li><a href = "../../html/publications/index.html">Publications</a></li>
+            <li><a href = "../../html/events/index.html">Events</a></li>
+            <li><a href = "../../html/institutions/index.html" class = "selected">Institutions</a></li>
+            <li><a href = "../../html/contact.html">Contact</a></li>
+            <li><a href = "../../html/miscellaneous/index.html">Miscellaneous</a></li>
 		</ul>
 		<ul class="site_menu">
-            <li><a href = "Belgium/index.html">Belgium</a></li>
-            <li><a href = "Canada/index.html">Canada</a></li>
-            <li><a href = "Italy/index.html">Italy</a></li>
-            <li><a href = "USA/index.html">USA</a></li>
+            <li><a href = "../../html/institutions/Belgium/index.html">Belgium</a></li>
+            <li><a href = "../../html/institutions/Canada/index.html">Canada</a></li>
+            <li><a href = "../../html/institutions/Italy/index.html">Italy</a></li>
+            <li><a href = "../../html/institutions/USA/index.html">USA</a></li>
 		</ul>
+
+
 	<h1 class = "big">Institutions</h1>
 
         <div>
 
             <p>
-                I have been working within different institutions, in <a href = "Belgium/index.html">Belgium</a>, <a href = "Canada/index.html">Canada</a>, <a href = "Italy/index.html">Italy</a> and the <a href = "USA/index.html">USA</a>. They are listed here, along with the projects and outcomes (publications, software, etc.) I've been involved in.
+                I have been working within different institutions, in <a href = "../../html/institutions/Belgium/index.html">Belgium</a>, <a href = "../../html/institutions/Canada/index.html">Canada</a>, <a href = "../../html/institutions/Italy/index.html">Italy</a> and the <a href = "../../html/institutions/USA/index.html">USA</a>. They are listed here, along with the projects and outcomes (publications, software, etc.) I've been involved in.
             </p>
 
 
             <p>
-                At the moment, I am a researcher at the National Institute for Criminalistics and Criminology (<a href = "Belgium/NICC/index.html">NICC</a>), and a teaching assistant at <a href = "Belgium/UCLouvain/index.html">UCLouvain</a>.
+                At the moment, I am a researcher at the National Institute for Criminalistics and Criminology (<a href = "../../html/institutions/Belgium/NICC/index.html">NICC</a>), and a teaching assistant at <a href = "../../html/institutions/Belgium/UCLouvain/index.html">UCLouvain</a>.
             </p>
             
             <p>
