a bunch of new pages

--- a/html/events/index.html
+++ b/html/events/index.html
@@ -21,10 +21,10 @@
           <li><a href = "../../html/miscellaneous/index.html">Miscellaneous</a></li>
   </ul>
   <ul class="site_menu">
-          <li><a href = "../../html/events/2020-2029/index.html">2020-2029</a></li>
-          <li><a href = "../../html/events/2010-2019/index.html">2010-2019</a></li>
-          <li><a href = "../../html/events/2000-2009/index.html">2000-2009</a></li>
-          <li><a href = "../../html/events/1990-1999/index.html">1990-1999</a></li>
+          <li><a href = "../../html/events/index.html">1990-1999</a></li>
+          <li><a href = "../../html/events/index.html">2000-2009</a></li>
+          <li><a href = "../../html/events/index.html">2010-2019</a></li>
+          <li><a href = "../../html/events/index.html">2020-2029</a></li>
   </ul>
 	<h1 class = "big">Events</h1>
 
