--- a/html/miscellaneous/D/index.html
+++ b/html/miscellaneous/D/index.html
@@ -53,6 +53,11 @@
             <li><a href = "../../../html/miscellaneous/Z/index.html">Z</a></li>
 		</ul>
 
+        <ul class="site_menu">
+            <li><a href = "../../../html/miscellaneous/D/data/index.html">data</a></li>
+		</ul>
+
+
         <h1 class = "big">D</h1>
 
         <div>
