--- a/html/miscellaneous/F/index.html
+++ b/html/miscellaneous/F/index.html
@@ -52,7 +52,11 @@
             <li><a href = "../../../html/miscellaneous/Y/index.html">Y</a></li>
             <li><a href = "../../../html/miscellaneous/Z/index.html">Z</a></li>
 		</ul>
-        
+
+        <ul class="site_menu">
+            <li><a href = "../../../html/miscellaneous/F/FAR/index.html">FAR</a></li>
+		</ul>
+
         <h1 class = "big">F</h1>
 
         <div>
