--- a/html/miscellaneous/I/index.html
+++ b/html/miscellaneous/I/index.html
@@ -55,6 +55,7 @@
 
         <ul class="site_menu">
             <li><a href = "../../../html/miscellaneous/I/IHD/index.html">IHD</a></li>
+            <li><a href = "../../../html/miscellaneous/I/IIHA/index.html">IIHA</a></li>
 		</ul>
 
         <h1 class = "big">I</h1>
