--- a/html/miscellaneous/N/index.html
+++ b/html/miscellaneous/N/index.html
@@ -53,13 +53,17 @@
             <li><a href = "../../../html/miscellaneous/Z/index.html">Z</a></li>
         </ul>
 
+		<ul class="site_menu">
+            <li><a href = "../../../html/miscellaneous/N/Neo4j/index.html">Neo4j</a></li>
+		</ul>
+
 
         <h1 class = "big">N</h1>
 
         <div>
 
 
-            <br /><signature> — 16 September 2023</signature>
+            <br /><signature> — 18 October 2023</signature>
 
         </div>
 
