--- a/html/miscellaneous/P/index.html
+++ b/html/miscellaneous/P/index.html
@@ -55,6 +55,7 @@
 
 		<ul class="site_menu">
             <li><a href = "../../../html/miscellaneous/P/PIES/index.html">PIES</a></li>
+            <li><a href = "../../../html/miscellaneous/P/Python/index.html">Python</a></li>
 		</ul>
 
         <h1 class = "big">P</h1>
