--- a/html/events/2020-2029 (copy)/index.html
+++ b/html/events/2020-2029 (copy)/index.html
@@ -2,13 +2,16 @@
 <html lang="en-US" xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>
-            2020-2029
+            2002-2029
         </title>
         <meta charset="UTF-8" />
         <link rel="shortcut icon" href="../../../img/PPJMHJ.ico" />
         <link rel="stylesheet" type="text/css" href="../../../css/default.css" />
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     </head>
+
+
+
     <body class="w3-container w3-auto w3-section w3-mobile">
         <a href="../../../html/ubi_bene_ibi_patria.html">
             <img src="../../../img/Ubi_bene_ibi_patria_logo.jpg" /></a>
@@ -20,12 +23,35 @@
             <li><a href = "../../../html/contact.html">Contact</a></li>
             <li><a href = "../../../html/miscellaneous/index.html">Miscellaneous</a></li>
 		</ul>
+
+
+        
 		<ul class="site_menu">
-            <li><a href = "../../../html/events/2020-2029/index.html" class = "selected">2020-2029</a></li>
-            <li><a href = "../../../html/events/2010-2019/index.html">2010-2019</a></li>
-            <li><a href = "../../../html/events/2000-2009/index.html">2000-2009</a></li>
-            <li><a href = "../../../html/events/1990-1999/index.html">1990-1999</a></li>
+      <li><a href = "../../../html/events/1990-1999/index.html">1990-1999</a></li>
+      <li><a href = "../../../html/events/2000-2009/index.html">2000-2009</a></li>
+      <li><a href = "../../../html/events/2010-2019/index.html">2010-2019</a></li>            
+      <li><a href = "../../../html/events/2020-2029/index.html"class = "selected">2020-2029</a></li>
+    </ul>
+
+
+
+
+
+		<ul class="site_menu">
+            <li><a href = "../../../html/events/2020-2029/2020/index.html">2020</a></li>
+            <li><a href = "../../../html/events/2020-2029/2021/index.html">2021</a></li>
+            <li><a href = "../../../html/events/2020-2029/2022/index.html">2022</a></li>
+            <li><a href = "../../../html/events/2020-2029/2023/index.html">2023</a></li>
+            <li><a href = "../../../html/events/2020-2029/2023/index.html">2023</a></li>
+            <li><a href = "../../../html/events/2020-2029/2024/index.html">2024</a></li>
+            <li><a href = "../../../html/events/2020-2029/2025/index.html">2025</a></li>
+            <li><a href = "../../../html/events/2020-2029/2026/index.html">2026</a></li>
+            <li><a href = "../../../html/events/2020-2029/2027/index.html">2027</a></li>
+            <li><a href = "../../../html/events/2020-2029/2028/index.html">2028</a></li>
+            <li><a href = "../../../html/events/2020-2029/2029/index.html">2029</a></li>
 		</ul>
+
+
 	<h1 class = "big">2020 — 2029</h1>
 
         <div>
