--- a/html/miscellaneous/I/IIHA/index.html
+++ b/html/miscellaneous/I/IIHA/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US" xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>
-            PIES
+            It Is Happening Again (IIHA)
         </title>
         <meta charset="UTF-8" />
         <link rel="shortcut icon" href="../../../../img/PPJMHJ.ico" />
@@ -36,14 +36,14 @@
             <li><a href = "../../../../html/miscellaneous/F/index.html">F</a></li>
             <li><a href = "../../../../html/miscellaneous/G/index.html">G</a></li>
             <li><a href = "../../../../html/miscellaneous/H/index.html">H</a></li>
-            <li><a href = "../../../../html/miscellaneous/I/index.html">I</a></li>
+            <li><a href = "../../../../html/miscellaneous/I/index.html" class = "selected">I</a></li>
             <li><a href = "../../../../html/miscellaneous/J/index.html">J</a></li>
             <li><a href = "../../../../html/miscellaneous/K/index.html">K</a></li>
             <li><a href = "../../../../html/miscellaneous/L/index.html">L</a></li>
             <li><a href = "../../../../html/miscellaneous/M/index.html">M</a></li><br />
             <li><a href = "../../../../html/miscellaneous/N/index.html">N</a></li>
             <li><a href = "../../../../html/miscellaneous/O/index.html">O</a></li>
-            <li><a href = "../../../../html/miscellaneous/P/index.html" class = "selected">P</a></li>
+            <li><a href = "../../../../html/miscellaneous/P/index.html">P</a></li>
             <li><a href = "../../../../html/miscellaneous/Q/index.html">Q</a></li>
             <li><a href = "../../../../html/miscellaneous/R/index.html">R</a></li>
             <li><a href = "../../../../html/miscellaneous/S/index.html">S</a></li>
@@ -58,29 +58,21 @@
 
 
 		<ul class="site_menu">
-            <li><a href = "../../../../html/miscellaneous/P/PIES/index.html" class = "selected">PIES</a></li>
-            <li><a href = "../../../../html/miscellaneous/P/Python/index.html">Python</a></li>
+            <li><a href = "../../../../html/miscellaneous/I/IHD/index.html">IHD</a></li>
+            <li><a href = "../../../../html/miscellaneous/I/IIHA/index.html"class = "selected">IIHA</a></li>
 		</ul>
 
-		<ul class="site_menu">
-            <li><a href = "../../../../html/miscellaneous/P/PIES/summary.html">Summary</a></li>
-            <li><a href = "../../../../html/miscellaneous/P/PIES/partners.html">Partners</a></li>
-            <li><a href = "../../../../html/miscellaneous/P/PIES/workshop.html">Workshop</a></li>
-            <li><a href = "../../../../html/miscellaneous/P/PIES/conference.html">Conference</a></li>
-            <li><a href = "../../../../html/miscellaneous/P/PIES/results.html">Results</a></li>
-            <li><a href = "../../../../html/miscellaneous/P/PIES/publications.html">Publications</a></li>
-		</ul>
-        
 
-        <h1 class = "big">PIES – The Prüm Implementation, Evaluation, and Strengthening of Forensic DNA Data Exchange</h1>
+        <h1 class = "big">It Is Happening Again (IIHA)</h1>
+        <h2 class = "big">Digital criminal justice archives as building blocks for the study of recidivism</h2>
 
         <div>
 
             <p>
-                Official website: <a href = "https://incc.fgov.be/PIES" target = "_blank">https://incc.fgov.be/PIES</a>
+                <a href= "https://incc.fgov.be/IIHA" target = "_blank">https://incc.fgov.be/IIHA</a>
             </p>
             
-            <br /><signature> — 1 October 2023</signature>
+            <br /><signature> — 7 October 2023</signature>
 
         </div>
 
