--- a/html/miscellaneous/R/index.html
+++ b/html/miscellaneous/R/index.html
@@ -10,18 +10,22 @@
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     </head>
     
+
+    
     <body class="w3-container w3-auto w3-section w3-mobile">
         <a href="../../../html/ubi_bene_ibi_patria.html">
             <img src="../../../img/Ubi_bene_ibi_patria_logo.jpg" />
         </a>
-        <ul class="site_menu">
+
+
+		<ul class="site_menu">
             <li><a href = "../../../index.html">Home</a></li>
             <li><a href = "../../../html/publications/index.html">Publications</a></li>
             <li><a href = "../../../html/events/index.html">Events</a></li>
             <li><a href = "../../../html/institutions/index.html">Institutions</a></li>
             <li><a href = "../../../html/contact.html">Contact</a></li>
             <li><a href = "../../../html/miscellaneous/index.html"  class = "selected">Miscellaneous</a></li>
-        </ul>
+		</ul>
 
 
         <ul class="site_menu">
@@ -42,7 +46,7 @@
             <li><a href = "../../../html/miscellaneous/O/index.html">O</a></li>
             <li><a href = "../../../html/miscellaneous/P/index.html">P</a></li>
             <li><a href = "../../../html/miscellaneous/Q/index.html">Q</a></li>
-            <li><a href = "../../../html/miscellaneous/R/index.html" class = "selected">R</a></li>
+            <li><a href = "../../../html/miscellaneous/R/index.html"class = "selected">R</a></li>
             <li><a href = "../../../html/miscellaneous/S/index.html">S</a></li>
             <li><a href = "../../../html/miscellaneous/T/index.html">T</a></li>
             <li><a href = "../../../html/miscellaneous/U/index.html">U</a></li>
@@ -51,15 +55,19 @@
             <li><a href = "../../../html/miscellaneous/X/index.html">X</a></li>
             <li><a href = "../../../html/miscellaneous/Y/index.html">Y</a></li>
             <li><a href = "../../../html/miscellaneous/Z/index.html">Z</a></li>
-        </ul>
+		</ul>
 
+
+		<ul class="site_menu">
+            <li><a href = "../../../html/miscellaneous/R/references/index.html">References</a></li>
+		</ul>
 
         <h1 class = "big">R</h1>
 
         <div>
 
 
-            <br /><signature> — 16 September 2023</signature>
+            <br /><signature> — 7 October 2023</signature>
 
         </div>
 
