--- a/html/miscellaneous/O/Odoo/down_payment.html
+++ b/html/miscellaneous/O/Odoo/down_payment.html
@@ -2,7 +2,7 @@
 <html lang="en-US" xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>
-            Odoo
+            Down payment
         </title>
         <meta charset="UTF-8" />
         <link rel="shortcut icon" href="../../../../img/PPJMHJ.ico" />
@@ -63,8 +63,9 @@
 
 
 		<ul class="site_menu">
-      <li><a href = "../../../../html/miscellaneous/O/Odoo/down_payment.html" class = "selected">Down payment</a></li>
-    </ul>
+            <li><a href = "../../../../html/miscellaneous/O/Odoo/down_payment.html" class = "selected">Down payment</a></li>
+            <li><a href = "../../../../html/miscellaneous/O/Odoo/credit_note.html" >Credit note</a></li>
+        </ul>
 
 
         <h1 class = "big">Acompte</h1>
