Konsole, Java, Javascript

--- a/html/miscellaneous/J/index.html
+++ b/html/miscellaneous/J/index.html
@@ -53,13 +53,18 @@
                 <li><a href = "../../../html/miscellaneous/Y/index.html">Y</a></li>
                 <li><a href = "../../../html/miscellaneous/Z/index.html">Z</a></li>
             </ul>
+
+    	<ul class="site_menu">
+                <li><a href = "../../../html/miscellaneous/J/Java/index.html">Java</a></li>
+                <li><a href = "../../../html/miscellaneous/J/Javascript/index.html">Javascript</a></li>
+        </ul>
     
         <h1 class = "big">J</h1>
 
         <div>
 
 
-            <br /><signature> — 16 September 2023</signature>
+            <br /><signature> — 21 October 2023</signature>
 
         </div>
 
