--- a/html/miscellaneous/K/index.html
+++ b/html/miscellaneous/K/index.html
@@ -53,13 +53,16 @@
             <li><a href = "../../../html/miscellaneous/Z/index.html">Z</a></li>
         </ul>
 
-        
+        <ul class="site_menu">
+            <li><a href = "../../../html/miscellaneous/K/Konsole/index.html">Konsole</a></li>
+        </ul>
+
         <h1 class = "big">K</h1>
 
         <div>
 
 
-            <br /><signature> — 16 September 2023</signature>
+            <br /><signature> — 21 October 2023</signature>
 
         </div>
 
