LaTeX, Python, Terminator, Telegram

--- a/html/miscellaneous/J/Javascript/index.html
+++ b/html/miscellaneous/J/Javascript/index.html
@@ -92,7 +92,7 @@
 
 
                 <li>
-                  Information that turned out to be helpful for my work: <a href = "../../../../html/miscellaneous/J/Javascript/how_to.html">How to</a>
+                  Practical information: <a href = "../../../../html/miscellaneous/J/Javascript/how_to.html">How to</a>
                 </li>
 
                 
