--- a/html/miscellaneous/L/LaTeX/index.html
+++ b/html/miscellaneous/L/LaTeX/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US" xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>
-            Java
+            LaTeX
         </title>
         <meta charset="UTF-8" />
         <link rel="shortcut icon" href="../../../../img/PPJMHJ.ico" />
@@ -37,11 +37,11 @@
             <li><a href = "../../../../html/miscellaneous/G/index.html">G</a></li>
             <li><a href = "../../../../html/miscellaneous/H/index.html">H</a></li>
             <li><a href = "../../../../html/miscellaneous/I/index.html">I</a></li>
-            <li><a href = "../../../../html/miscellaneous/J/index.html" class = "selected">J</a></li>
+            <li><a href = "../../../../html/miscellaneous/J/index.html">J</a></li>
             <li><a href = "../../../../html/miscellaneous/K/index.html">K</a></li>
-            <li><a href = "../../../../html/miscellaneous/L/index.html">L</a></li>
+            <li><a href = "../../../../html/miscellaneous/L/index.html"class = "selected">L</a></li>
             <li><a href = "../../../../html/miscellaneous/M/index.html">M</a></li><br />
-            <li><a href = "../../../../html/miscellaneous/N/index.html">N</a></li>
+            <li><a href = "../../../../html/miscellaneous/N/index.html" >N</a></li>
             <li><a href = "../../../../html/miscellaneous/O/index.html">O</a></li>
             <li><a href = "../../../../html/miscellaneous/P/index.html">P</a></li>
             <li><a href = "../../../../html/miscellaneous/Q/index.html">Q</a></li>
@@ -57,19 +57,17 @@
 		</ul>
 
 
+		<ul class="site_menu">
+            <li><a href = "../../../../html/miscellaneous/L/LaTeX/index.html" class = "selected">LaTeX</a></li>
+		</ul>
+
     <ul class="site_menu">
-      <li><a href = "../../../../html/miscellaneous/J/Java/index.html"class = "selected">Java</a></li>
-      <li><a href = "../../../../html/miscellaneous/J/Javascript/index.html">Javascript</a></li>
-  </ul>
+        <li><a href = "../../../../html/miscellaneous/L/LaTeX/how_to.html">How to?</a></li>
+    </ul>
 
 
-  <ul class="site_menu">
-      <li><a href = "../../../../html/miscellaneous/J/Java/how_to.html">How to?</a></li>
-  </ul>
-
-
-        <h1 class = "big">Java</h1>
-        <h2 class = "big">Programming language</h2>
+        <h1 class = "big">LaTeX</h1>
+        <h2 class = "big">Document preparation system</h2>
 
         <div>
 
@@ -81,18 +79,24 @@
 
 
                 <li>
-                   <b>Java</b>: <a href = "https://www.java.com/" target = "_blank">https://www.java.com/</a> 
-                </li>
-
-
-
-                <li>
-                  <b>Java Tutorial</b>: <a href = "https://www.w3schools.com/java/" target = "_blank">"https://www.w3schools.com/java/</a>
+                   <b>LaTeX</b>: <a href = "https://www.latex-project.org/" target = "_blank">https://www.latex-project.org/</a> (high-quality typesetting system)
                 </li>
 
 
                 <li>
-                  Practical information: <a href = "../../../../html/miscellaneous/J/Java/how_to.html">How to</a>
+                  <b>Overleaf</b>: <a href = "https://overleaf.com/" target = "_blank">https://overleaf.com/</a> (online collaborative LaTeX editor)
+               </li>
+
+               <li>
+                <b>LaTeX-Workshop</b>: <a href = "https://github.com/James-Yu/LaTeX-Workshop/" target = "_blank">https://github.com/James-Yu/LaTeX-Workshop/</a> (extension for Visual Studio Code)
+             </li>
+
+             <li>
+                <b>LaTeX and typography</b>: <a href = "https://filipbiljecki.com/latex.html#:~:text=Fonts,exploring%20which%20suits%20you%20most" target = "_blank">https://filipbiljecki.com</a> 
+             </li>
+
+                <li>
+                  Practical information: <a href = "../../../../html/miscellaneous/L/LaTeX/how_to.html">How to</a>
                 </li>
 
                 
