--- a/html/miscellaneous/L/index.html
+++ b/html/miscellaneous/L/index.html
@@ -53,6 +53,10 @@
             <li><a href = "../../../html/miscellaneous/Z/index.html">Z</a></li>
         </ul>
 
+        <ul class="site_menu">
+            <li><a href = "../../../html/miscellaneous/L/LaTeX/index.html">LaTeX</a></li>
+        </ul>
+
         
         <h1 class = "big">L</h1>
 
