--- a/html/miscellaneous/N/Neo4j/how_to.html
+++ b/html/miscellaneous/N/Neo4j/how_to.html
@@ -98,8 +98,16 @@
                     <b>A simple visual overview of a database</b>: <a href = "https://stackoverflow.com/questions/35281066/neo4j-is-it-possible-to-visualise-a-simple-overview-of-my-database" target = "_blank">https://stackoverflow.com</a> 
                 </li>
  
-
+                <li>
+                    <b>Mark Needham's posts from 2008 onwards</b>: <a href = "https://www.markhneedham.com/blog/page/186/" target = "_blank">https://www.markhneedham.com/blog/</a> 
+                </li>
                
+
+
+                <li>
+                    <b>Delete/Remove dynamic properties</b>: <a href = "https://www.markhneedham.com/blog/2019/03/14/neo4j-delete-dynamic-properties/" target = "_blank">https://www.markhneedham.com/blog/</a> 
+                </li>
+
               </ul>
             
             </p>
