--- a/html/miscellaneous/P/Python/index.html
+++ b/html/miscellaneous/P/Python/index.html
@@ -62,7 +62,10 @@
             <li><a href = "../../../../html/miscellaneous/P/Python/index.html" class = "selected">Python</a></li>
 		</ul>
 
-
+        <ul class="site_menu">
+            <li><a href = "../../../../html/miscellaneous/P/Python/how_to.html">How to?</a></li>
+          </ul>
+      
 
         <h1 class = "big">Python</h1>
         <h2 class = "big">Programming language</h2>
