--- a/html/miscellaneous/T/index.html
+++ b/html/miscellaneous/T/index.html
@@ -53,6 +53,11 @@
             <li><a href = "../../../html/miscellaneous/Z/index.html">Z</a></li>
         </ul>
 
+        <ul class="site_menu">
+            <li><a href = "../../../html/miscellaneous/T/Telegram/index.html">Telegram</a></li>
+            <li><a href = "../../../html/miscellaneous/T/Terminator/index.html">Terminator</a></li>
+        </ul>
+
 
         <h1 class = "big">T</h1>
 
