--- a/html/miscellaneous/V/Visual Studio Code/how_to.html
+++ b/html/miscellaneous/V/Visual Studio Code/how_to.html
@@ -2,7 +2,7 @@
 <html lang="en-US" xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>
-            Java
+            Visual Studio Code - How to
         </title>
         <meta charset="UTF-8" />
         <link rel="shortcut icon" href="../../../../img/PPJMHJ.ico" />
@@ -37,7 +37,7 @@
             <li><a href = "../../../../html/miscellaneous/G/index.html">G</a></li>
             <li><a href = "../../../../html/miscellaneous/H/index.html">H</a></li>
             <li><a href = "../../../../html/miscellaneous/I/index.html">I</a></li>
-            <li><a href = "../../../../html/miscellaneous/J/index.html" class = "selected">J</a></li>
+            <li><a href = "../../../../html/miscellaneous/J/index.html">J</a></li>
             <li><a href = "../../../../html/miscellaneous/K/index.html">K</a></li>
             <li><a href = "../../../../html/miscellaneous/L/index.html">L</a></li>
             <li><a href = "../../../../html/miscellaneous/M/index.html">M</a></li><br />
@@ -49,7 +49,7 @@
             <li><a href = "../../../../html/miscellaneous/S/index.html">S</a></li>
             <li><a href = "../../../../html/miscellaneous/T/index.html">T</a></li>
             <li><a href = "../../../../html/miscellaneous/U/index.html">U</a></li>
-            <li><a href = "../../../../html/miscellaneous/V/index.html">V</a></li>
+            <li><a href = "../../../../html/miscellaneous/V/index.html"class = "selected">V</a></li>
             <li><a href = "../../../../html/miscellaneous/W/index.html">W</a></li>
             <li><a href = "../../../../html/miscellaneous/X/index.html">X</a></li>
             <li><a href = "../../../../html/miscellaneous/Y/index.html">Y</a></li>
@@ -57,19 +57,17 @@
 		</ul>
 
 
+		<ul class="site_menu">
+            <li><a href = "../../../../html/miscellaneous/V/Visual Studio Code/index.html" class = "selected">VS Code</a></li>
+		</ul>
+
     <ul class="site_menu">
-      <li><a href = "../../../../html/miscellaneous/J/Java/index.html"class = "selected">Java</a></li>
-      <li><a href = "../../../../html/miscellaneous/J/Javascript/index.html">Javascript</a></li>
-  </ul>
+      <li><a href = "../../../../html/miscellaneous/V/Visual Studio Code/how_to.html" class = "selected">How to?</a></li>
+    </ul>
 
 
-  <ul class="site_menu">
-      <li><a href = "../../../../html/miscellaneous/J/Java/how_to.html">How to?</a></li>
-  </ul>
-
-
-        <h1 class = "big">Java</h1>
-        <h2 class = "big">Programming language</h2>
+        <h1 class = "big">Visual Studio Code</h1>
+        <h2 class = "big">How to?</h2>
 
         <div>
 
@@ -78,24 +76,12 @@
             <p>
 
               <ul>
-
-
-                <li>
-                   <b>Java</b>: <a href = "https://www.java.com/" target = "_blank">https://www.java.com/</a> 
-                </li>
-
-
-
-                <li>
-                  <b>Java Tutorial</b>: <a href = "https://www.w3schools.com/java/" target = "_blank">"https://www.w3schools.com/java/</a>
-                </li>
-
-
-                <li>
-                  Practical information: <a href = "../../../../html/miscellaneous/J/Java/how_to.html">How to</a>
-                </li>
-
                 
+                <li>
+                    <b></b> <a href = "" target = "_blank"></a>
+                 </li>
+  
+
               </ul>
             
             </p>
