--- a/html/miscellaneous/V/index.html
+++ b/html/miscellaneous/V/index.html
@@ -54,6 +54,10 @@
         </ul>
 
 
+        <ul class="site_menu">
+            <li><a href = "../../../html/miscellaneous/V/Visual Studio Code/index.html">VS Code</a></li>
+        </ul>
+
         <h1 class = "big">V</h1>
 
         <div>
