--- a/html/miscellaneous/K/Konsole/index.html
+++ b/html/miscellaneous/K/Konsole/index.html
@@ -93,7 +93,7 @@
 
                 
                 <li>
-                  Information that turned out to be helpful for my work: <a href = "../../../../html/miscellaneous/K/Konsole/how_to.html">How to</a>
+                  Practical information: <a href = "../../../../html/miscellaneous/K/Konsole/how_to.html">How to</a>
                 </li>
 
                 
