--- a/html/miscellaneous/C/index.html
+++ b/html/miscellaneous/C/index.html
@@ -53,6 +53,13 @@
             <li><a href = "../../../html/miscellaneous/Z/index.html">Z</a></li>
 		</ul>
 
+		<ul class="site_menu">
+            <li><a href = "../../../html/miscellaneous/C/C/index.html">C</a></li>
+            <li><a href = "../../../html/miscellaneous/C/Cpp/index.html">C++</a></li>
+            <li><a href = "../../../html/miscellaneous/C/Cs/index.html">C#</a></li>
+            <li><a href = "../../../html/miscellaneous/C/Computer Science/index.html">Computer Science</a></li>
+		</ul>
+
         <h1 class = "big">C</h1>
 
         <div>
