--- a/html/miscellaneous/G/index.html
+++ b/html/miscellaneous/G/index.html
@@ -53,6 +53,12 @@
             <li><a href = "../../../html/miscellaneous/Z/index.html">Z</a></li>
 		</ul>
 
+
+		<ul class="site_menu">
+
+            <li><a href = "../../../html/miscellaneous/G/Git/index.html">Git</a></li>
+		</ul>
+
         <h1 class = "big">G</h1>
 
         <div>
