--- a/html/miscellaneous/J/Javascript/index.html
+++ b/html/miscellaneous/J/Javascript/index.html
@@ -92,6 +92,12 @@
 
 
                 <li>
+                    <b>Learn Python on Zenva</b>: <a href = "https://academy.zenva.com/product-category/all/web-development/javascript/" target = "_blank">https://academy.zenva.com/</a> 
+                 </li>
+                
+
+
+                <li>
                   Practical information: <a href = "../../../../html/miscellaneous/J/Javascript/how_to.html">How to</a>
                 </li>
 
