--- a/html/miscellaneous/N/Neo4j/index.html
+++ b/html/miscellaneous/N/Neo4j/index.html
@@ -185,6 +185,17 @@
                 </li>
 
                 <li>
+                  <b>Tomaž Bratanič's blog</b>: <a href = "https://github.com/tomgeudens/practical-neo4j" target = "_blank">https://bratanic-tomaz.medium.com/</a> 
+                </li>
+
+
+                <li>
+                  <b>Tom Geudens' practical Neo4j</b>: <a href = "https://github.com/tomgeudens/practical-neo4j" target = "_blank">https://github.com/tomgeudens/practical-neo4j</a> 
+                </li>
+
+                
+
+                <li>
                   <b>Consultants</b>: <a href = "https://www.google.com/search?q=consultant+neo4j&oq=consultant+neo4j" target = "_blank">https://www.google.com/</a> 
            
                 </li>
