--- a/html/miscellaneous/W/index.html
+++ b/html/miscellaneous/W/index.html
@@ -53,6 +53,11 @@
             <li><a href = "../../../html/miscellaneous/Z/index.html">Z</a></li>
         </ul>
 
+        <ul class="site_menu">
+
+            <li><a href = "../../../html/miscellaneous/W/Web/index.html">Web</a></li>
+
+        </ul>
 
         <h1 class = "big">W</h1>
 
