--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     At the moment, I am developing a computer system to facilitate the integration of data originating from different criminal justice databases: the <a href = "html/miscellaneous/I/IHD/index.html">Integrated Historical Database (IHD)</a>. 
 </p> 
 <p>   
-    In general, I am interested by computers, psychology, language and mathematics.
+    In general, I am interested by <a href = "html/miscellaneous/C/Computer Science/index.html">computers</a>, psychology, language and mathematics.
 </p>
 
 <p>
