--- a/html/miscellaneous/L/LaTeX/index.html
+++ b/html/miscellaneous/L/LaTeX/index.html
@@ -59,6 +59,7 @@
 
 		<ul class="site_menu">
             <li><a href = "../../../../html/miscellaneous/L/LaTeX/index.html" class = "selected">LaTeX</a></li>
+            <li><a href = "../../../../html/miscellaneous/L/Linux/index.html">Linux</a></li>
 		</ul>
 
     <ul class="site_menu">
