--- a/html/miscellaneous/L/index.html
+++ b/html/miscellaneous/L/index.html
@@ -55,6 +55,7 @@
 
         <ul class="site_menu">
             <li><a href = "../../../html/miscellaneous/L/LaTeX/index.html">LaTeX</a></li>
+            <li><a href = "../../../html/miscellaneous/L/Linux/index.html">Linux</a></li>
         </ul>
 
         
