--- a/html/miscellaneous/J/Java/index.html
+++ b/html/miscellaneous/J/Java/index.html
@@ -87,7 +87,7 @@
 
 
                 <li>
-                  <b>Java Tutorial</b>: <a href = "https://www.w3schools.com/java/" target = "_blank">"https://www.w3schools.com/java/</a>
+                  <b>Java Tutorial</b>: <a href = "https://www.w3schools.com/java/" target = "_blank">https://www.w3schools.com/java/</a>
                 </li>
 
 
