--- a/html/miscellaneous/J/Javascript/index.html
+++ b/html/miscellaneous/J/Javascript/index.html
@@ -87,7 +87,7 @@
 
 
                 <li>
-                  <b>JavaScript Tutorial</b>: <a href = "https://www.w3schools.com/js/" target = "_blank">"https://www.w3schools.com/js/</a>
+                  <b>JavaScript Tutorial</b>: <a href = "https://www.w3schools.com/js/" target = "_blank">https://www.w3schools.com/js/</a>
                 </li>
 
 
