--- a/html/miscellaneous/U/Unreal/index.html
+++ b/html/miscellaneous/U/Unreal/index.html
@@ -89,7 +89,7 @@
 
 
                 <li>
-                    <b>Learn Unreal on Zenva</b>: <a href = "https://academy.zenva.com/product-category/all/game-development/unreal-engine/" target = "_blank">https://academy.zenva.com/product-category/all/game-development/unreal-engine/</a> 
+                    <b>Learn Unreal on Zenva</b>: <a href = "https://academy.zenva.com/product-category/all/game-development/unreal-engine/" target = "_blank">https://academy.zenva.com/</a> 
                  </li>
                 
 
