--- a/html/miscellaneous/F/FAR/index.html
+++ b/html/miscellaneous/F/FAR/index.html
@@ -33,10 +33,10 @@
             <li><a href = "../../../../html/miscellaneous/C/index.html">C</a></li>
             <li><a href = "../../../../html/miscellaneous/D/index.html">D</a></li>
             <li><a href = "../../../../html/miscellaneous/E/index.html">E</a></li>
-            <li><a href = "../../../../html/miscellaneous/F/index.html">F</a></li>
+            <li><a href = "../../../../html/miscellaneous/F/index.html"class = "selected">F</a></li>
             <li><a href = "../../../../html/miscellaneous/G/index.html">G</a></li>
             <li><a href = "../../../../html/miscellaneous/H/index.html">H</a></li>
-            <li><a href = "../../../../html/miscellaneous/I/index.html" class = "selected">I</a></li>
+            <li><a href = "../../../../html/miscellaneous/I/index.html">I</a></li>
             <li><a href = "../../../../html/miscellaneous/J/index.html">J</a></li>
             <li><a href = "../../../../html/miscellaneous/K/index.html">K</a></li>
             <li><a href = "../../../../html/miscellaneous/L/index.html">L</a></li>
