--- a/html/miscellaneous/Z/index.html
+++ b/html/miscellaneous/Z/index.html
@@ -53,6 +53,10 @@
             <li><a href = "../../../html/miscellaneous/Z/index.html" class = "selected">Z</a></li>
         </ul>
 
+        <ul class="site_menu">
+            <li><a href = "../../../html/miscellaneous/Z/Zotero/index.html">Zotero</a></li>
+        </ul>
+
         <h1 class = "big">Z</h1>
 
         <div>
