--- a/html/miscellaneous/C/Computer Science/index.html
+++ b/html/miscellaneous/C/Computer Science/index.html
@@ -77,11 +77,21 @@
 
             <p>
 
-              <ul>
+              <ul>  
+                
+                <li>
+                    <b>W3Schools Tutorials</b>: <a href = "https://www.w3schools.com/" target = "_blank">https://www.w3schools.com/</a> 
+               </li>
 
                 <li>
                     <b>Zenva academy</b>: <a href = "https://academy.zenva.com/" target = "_blank">https://academy.zenva.com/</a>
                 </li>
+
+                <li>
+                    <b>Manning</b>: <a href = "https://www.manning.com/" target = "_blank">https://www.manning.com/</a>
+                </li>
+
+
 
                 <li>
                     <a href = "../../../../html/miscellaneous/C/C/index.html">C</a>
@@ -100,12 +110,25 @@
                 </li>
 
                 <li>
+                    <a href = "../../../../html/miscellaneous/G/Go/index.html">Go</a>
+                </li>
+
+                <li>
                     <a href = "../../../../html/miscellaneous/J/Java/index.html">Java</a>
                 </li>
 
                 <li>
                     <a href = "../../../../html/miscellaneous/J/Javascript/index.html">Javascript</a>
                 </li>
+                <li>
+                    <a href = "../../../../html/miscellaneous/J/Julia/index.html">Julia</a>
+                </li>
+
+
+                <li>
+                    <a href = "../../../../html/miscellaneous/H/Haskell/index.html">Haskell</a>
+                </li>
+
 
                 <li>
                     <a href = "../../../../html/miscellaneous/K/Konsole/index.html">Konsole</a>
@@ -120,6 +143,11 @@
                 </li>
 
                 <li>
+                    <a href = "../../../../html/miscellaneous/M/Memgraph/index.html">Memgraph</a>
+                  </li>
+
+
+                <li>
                     <a href = "../../../../html/miscellaneous/N/Neo4j/index.html">Neo4j</a>
                   </li>
 
@@ -132,6 +160,14 @@
                   <a href = "../../../../html/miscellaneous/P/Python/index.html">Python</a>
                 </li>
 
+                <li>
+                    <a href = "../../../../html/miscellaneous/R/R/index.html">R</a>
+                </li>
+
+
+                <li>
+                    <a href = "../../../../html/miscellaneous/R/Rust/index.html">Rust</a>
+                </li>
 
                 <li>
                     <a href = "../../../../html/miscellaneous/T/Telegram/index.html">Telegram</a>
@@ -159,6 +195,9 @@
                     <a href = "../../../../html/miscellaneous/W/Web/index.html">Web</a>
                 </li>
 
+                <li>
+                    <a href = "../../../../html/miscellaneous/Z/Zotero/index.html">Zotero</a>
+                </li>
               </ul>
             
             </p>
