--- a/html/miscellaneous/H/index.html
+++ b/html/miscellaneous/H/index.html
@@ -53,6 +53,10 @@
             <li><a href = "../../../html/miscellaneous/Z/index.html">Z</a></li>
 		</ul>
 
+        <ul class="site_menu">
+            <li><a href = "../../../html/miscellaneous/H/Haskell/index.html">Haskell</a></li>
+        </ul> 
+        
         <h1 class = "big">H</h1>
 
         <div>
