--- a/html/miscellaneous/J/index.html
+++ b/html/miscellaneous/J/index.html
@@ -55,8 +55,10 @@
             </ul>
 
     	<ul class="site_menu">
+
                 <li><a href = "../../../html/miscellaneous/J/Java/index.html">Java</a></li>
                 <li><a href = "../../../html/miscellaneous/J/Javascript/index.html">Javascript</a></li>
+                <li><a href = "../../../html/miscellaneous/J/Julia/index.html">Julia</a></li>
         </ul>
     
         <h1 class = "big">J</h1>
