--- a/html/miscellaneous/N/Neo4j/index.html
+++ b/html/miscellaneous/N/Neo4j/index.html
@@ -185,7 +185,7 @@
                 </li>
 
                 <li>
-                  <b>Tomaž Bratanič's blog</b>: <a href = "https://github.com/tomgeudens/practical-neo4j" target = "_blank">https://bratanic-tomaz.medium.com/</a> 
+                  <b>Tomaž Bratanič's blog</b>: <a href = "https://bratanic-tomaz.medium.com/" target = "_blank">https://bratanic-tomaz.medium.com/</a> 
                 </li>
 
 
