--- a/html/miscellaneous/R/index.html
+++ b/html/miscellaneous/R/index.html
@@ -59,8 +59,14 @@
 
 
 		<ul class="site_menu">
+
+            <li><a href = "../../../html/miscellaneous/R/R/index.html">R</a></li>
             <li><a href = "../../../html/miscellaneous/R/references/index.html">References</a></li>
-		</ul>
+            <li><a href = "../../../html/miscellaneous/R/Rust/index.html">Rust</a></li>
+		
+        
+        
+        </ul>
 
         <h1 class = "big">R</h1>
 
