--- a/html/miscellaneous/W/Web/index.html
+++ b/html/miscellaneous/W/Web/index.html
@@ -82,7 +82,7 @@
                  </li>
                  
                  <li>
-                    <b>W3Schools Online Web Tutorials</b>: <a href = "https://www.w3schools.com/" target = "_blank">https://www.w3schools.com/</a> 
+                    <b>W3Schools Tutorials</b>: <a href = "https://www.w3schools.com/" target = "_blank">https://www.w3schools.com/</a> 
                  </li>
                  
 
