--- a/html/miscellaneous/G/Git/how_to.html
+++ b/html/miscellaneous/G/Git/how_to.html
@@ -59,6 +59,7 @@
 
 		<ul class="site_menu">
             <li><a href = "../../../../html/miscellaneous/G/Git/index.html" class = "selected">Git</a></li>
+            <li><a href = "../../../../html/miscellaneous/G/Go/index.html">Go</a></li>
 		</ul>
 
     <ul class="site_menu">
