--- a/html/miscellaneous/G/index.html
+++ b/html/miscellaneous/G/index.html
@@ -57,6 +57,7 @@
 		<ul class="site_menu">
 
             <li><a href = "../../../html/miscellaneous/G/Git/index.html">Git</a></li>
+            <li><a href = "../../../html/miscellaneous/G/Go/index.html">Go</a></li>
 		</ul>
 
         <h1 class = "big">G</h1>
