--- a/html/miscellaneous/J/Java/index.html
+++ b/html/miscellaneous/J/Java/index.html
@@ -60,6 +60,8 @@
     <ul class="site_menu">
       <li><a href = "../../../../html/miscellaneous/J/Java/index.html"class = "selected">Java</a></li>
       <li><a href = "../../../../html/miscellaneous/J/Javascript/index.html">Javascript</a></li>
+
+      <li><a href = "../../../../html/miscellaneous/J/Julia/index.html">Julia</a></li>
   </ul>
 
 
