--- a/html/miscellaneous/J/Javascript/how_to.html
+++ b/html/miscellaneous/J/Javascript/how_to.html
@@ -60,6 +60,7 @@
     	<ul class="site_menu">
             <li><a href = "../../../../html/miscellaneous/J/Java/index.html">Java</a></li>
             <li><a href = "../../../../html/miscellaneous/J/Javascript/index.html"class = "selected">Javascript</a></li>
+            <li><a href = "../../../../html/miscellaneous/J/Julia/index.html">Julia</a></li>
         </ul>
 
 
