--- a/html/miscellaneous/J/Julia/index.html
+++ b/html/miscellaneous/J/Julia/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US" xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>
-            C
+            Julia
         </title>
         <meta charset="UTF-8" />
         <link rel="shortcut icon" href="../../../../img/PPJMHJ.ico" />
@@ -30,14 +30,14 @@
         <ul class="site_menu">
             <li><a href = "../../../../html/miscellaneous/A/index.html">A</a></li>
             <li><a href = "../../../../html/miscellaneous/B/index.html">B</a></li>
-            <li><a href = "../../../../html/miscellaneous/C/index.html"class = "selected">C</a></li>
+            <li><a href = "../../../../html/miscellaneous/C/index.html">C</a></li>
             <li><a href = "../../../../html/miscellaneous/D/index.html">D</a></li>
             <li><a href = "../../../../html/miscellaneous/E/index.html">E</a></li>
             <li><a href = "../../../../html/miscellaneous/F/index.html">F</a></li>
             <li><a href = "../../../../html/miscellaneous/G/index.html">G</a></li>
             <li><a href = "../../../../html/miscellaneous/H/index.html">H</a></li>
             <li><a href = "../../../../html/miscellaneous/I/index.html">I</a></li>
-            <li><a href = "../../../../html/miscellaneous/J/index.html">J</a></li>
+            <li><a href = "../../../../html/miscellaneous/J/index.html" class = "selected">J</a></li>
             <li><a href = "../../../../html/miscellaneous/K/index.html">K</a></li>
             <li><a href = "../../../../html/miscellaneous/L/index.html">L</a></li>
             <li><a href = "../../../../html/miscellaneous/M/index.html">M</a></li><br />
@@ -57,27 +57,21 @@
 		</ul>
 
 
-		<ul class="site_menu">            
-            <li><a href = "../../../../html/miscellaneous/C/C/index.html"class = "selected">C</a></li>
-            <li><a href = "../../../../html/miscellaneous/C/Cpp/index.html">C++</a></li>
-            <li><a href = "../../../../html/miscellaneous/C/Cs/index.html">C#</a></li>
-            <li><a href = "../../../../html/miscellaneous/C/Computer Science/index.html">Computer Science</a></li>
-		</ul>
+    <ul class="site_menu">
+      <li><a href = "../../../../html/miscellaneous/J/Java/index.html">Java</a></li>
+      <li><a href = "../../../../html/miscellaneous/J/Javascript/index.html">Javascript</a></li>
+
+      <li><a href = "../../../../html/miscellaneous/J/Julia/index.html"class = "selected">Julia</a></li>
+  </ul>
 
 
-		<ul class="site_menu">            
-            <li><a href = "../../../../html/miscellaneous/C/C/how_to.html">How to?</a></li>
+  <ul class="site_menu">
+      <li><a href = "../../../../html/miscellaneous/J/Julia/how_to.html">How to?</a></li>
+  </ul>
 
-		</ul>
 
-
-        <h1 class = "big">C</h1> 
-        <br />
-        <br />
-        <br />
-        <br />
+        <h1 class = "big">Julia</h1>
         <h2 class = "big">Programming language</h2>
-  
 
         <div>
 
@@ -87,13 +81,15 @@
 
               <ul>
 
+
                 <li>
-                    <b>C Standard Library Reference Tutorial</b>: <a href = "https://www.tutorialspoint.com/c_standard_library/" target = "_blank">https://www.tutorialspoint.com/c_standard_library/</a>
+                   <b>Julia</b>: <a href = "https://julialang.org/" target = "_blank">https://julialang.org/</a> 
                 </li>
 
-                
+
+
                 <li>
-                    <b>Tutorial on W3Schools</b>: <a href = "https://www.w3schools.com/c/" target = "_blank">https://www.w3schools.com/c/</a>
+                  Practical information: <a href = "../../../../html/miscellaneous/J/Julia/how_to.html">How to</a>
                 </li>
 
                 
